@@ -232,6 +232,10 @@ MessageProxy.popupMenu.ReplyAll.Label=Reply to All
 MessageProxy.popupMenu.Forward.Label=Forward
 MessageProxy.popupMenu.Delete.Label=Delete
 
+NewMessageProxy.popupMenu.OpenAsNew.Label=Resume Draft
+NewMessageProxy.popupMenu.OpenCopy.Label=Open Copy
+NewMessageProxy.popupMenu.Delete.Label=Delete
+
 MessageProxy.cachingPopupMenu.Open.Label=Open Message
 MessageProxy.cachingPopupMenu.OpenMulti.Label=Open...
 MessageProxy.cachingPopupMenu.OpenMulti.Text.Label=As Text
