@@ -1,3 +1,5 @@
+cleaned up the save as draft/resume draft ui a bit.
+
 login authenticator now has password field selected by default.
 
 fixed a bug where pooka would take a long time to startup when the loopback
